Se actualiza el codigo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Onix | Carros | Chevrolet</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
   <div class="header-container">
     <!-- Logo -->
     <div class="logo">
-      <a href="#"><img src="/imagenes/inalco-logo.avif" alt="Logo Inalco Chevrolet"></a>
+      <a href="#"><img src="imagenes/inalco-logo.avif" alt="Logo Inalco Chevrolet"></a>
     </div>
 
     <!-- Navegación -->
@@ -28,7 +28,7 @@
 </header>
 
     <div class="banner">
-        <img class="img-banner" src="/imagenes/Sail_Banner_Desktop.jpg" alt="Banner - Sail HB y Sail Sedán">
+        <img class="img-banner" src="imagenes/Sail_Banner_Desktop.jpg" alt="Banner - Sail HB y Sail Sedán">
         <div class="botones-banner">
           <a href="#" class="btn-banner">Sail HB</a>
           <a href="#" class="btn-banner">Sail Sedán</a>
@@ -37,7 +37,7 @@
     
     <div class="contactanos">
       <div class="caja-contactanos">
-        <img class="img-contacto" src="/imagenes/te-interesa-alguno-desk.avif" alt="Contactanos y te atendemos">
+        <img class="img-contacto" src="imagenes/te-interesa-alguno-desk.avif" alt="Contactanos y te atendemos">
         <div class="info-contacto">
             <p class="text-contacto1">¿Te interesa alguno?</p>
             <p class="text-contacto2">Dejanos tus datos y un asesor comercial se comunicará con vos.</p>
